--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "eq-digest-auth-strategy",
+    "name": "eq-digest-authentication-strategy",
     "version": "0.1.0",
     "description": "Strategy module for eq-digest-authentication",
     "homepage": "https://github.com/eq-inc/eq-strategy",
