Fix minor version of karmia-storage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eq-digest-authentication-strategy",
-    "version": "0.2.3",
+    "version": "0.2.4",
     "description": "Strategy module for eq-digest-authentication",
     "homepage": "https://github.com/eq-inc/eq-digest-authentication-strategy",
     "license": "Apache-2.0",
@@ -16,7 +16,7 @@
     "dependencies": {
         "co": ">=4.6.0",
         "js-sha512": ">=0.2.2",
-        "karmia-storage": ">=0.1.0",
+        "karmia-storage": "^0.1.5",
         "karmia-utility": ">=0.6.0",
         "lodash": ">=4.6.1"
     },
