--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eq-digest-authentication-strategy",
-    "version": "0.2.4",
+    "version": "0.2.5",
     "description": "Strategy module for eq-digest-authentication",
     "homepage": "https://github.com/eq-inc/eq-digest-authentication-strategy",
     "license": "Apache-2.0",
@@ -14,15 +14,15 @@
         "test": "./node_modules/.bin/mocha ./test"
     },
     "dependencies": {
-        "co": ">=4.6.0",
-        "js-sha512": ">=0.2.2",
+        "co": "^4.6.0",
+        "js-sha512": ">=0.7.1",
         "karmia-storage": "^0.1.5",
-        "karmia-utility": ">=0.6.0",
-        "lodash": ">=4.6.1"
+        "karmia-utility": "^0.6.0",
+        "lodash": "^4.17.5"
     },
     "devDependencies": {
-        "mocha": ">=2.4.5",
-        "expect.js": ">=0.3.1"
+        "mocha": "^5.0.5",
+        "expect.js": "^0.3.1"
     },
     "engines": {
         "node": ">=6.0.0"
